--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "eslint": "^8.30.0",
+    "prettier": "^2.8.1"
   },
   "browserslist": {
     "production": [
