--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
     "eslint": "^8.30.0",
+    "eslint-plugin-mdx": "^2.0.5",
     "prettier": "^2.8.1"
   },
   "browserslist": {
