--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@docusaurus/module-type-aliases": "2.2.0",
     "eslint": "^8.30.0",
     "eslint-plugin-mdx": "^2.0.5",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.1"
   },
   "browserslist": {
