--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@docusaurus/module-type-aliases": "2.2.0",
     "eslint": "^8.30.0",
     "eslint-plugin-mdx": "^2.0.5",
