--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@docusaurus/core": "2.2.0",
     "@docusaurus/plugin-ideal-image": "^2.2.0",
+    "@docusaurus/plugin-pwa": "^2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@docusaurus/theme-search-algolia": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@docusaurus/eslint-plugin": "^2.2.0",
     "@docusaurus/module-type-aliases": "2.2.0",
     "eslint": "^8.30.0",
     "eslint-plugin-mdx": "^2.0.5",
