--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/plugin-ideal-image": "^2.2.0",
-    "@docusaurus/plugin-pwa": "^2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@docusaurus/theme-search-algolia": "^2.2.0",
+    "@docusaurus/core": "^2.3.1",
+    "@docusaurus/plugin-ideal-image": "^2.3.1",
+    "@docusaurus/plugin-pwa": "^2.3.1",
+    "@docusaurus/preset-classic": "^2.3.1",
+    "@docusaurus/theme-search-algolia": "^2.3.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -26,8 +26,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
-    "@docusaurus/eslint-plugin": "^2.2.0",
-    "@docusaurus/module-type-aliases": "2.2.0",
+    "@docusaurus/eslint-plugin": "^2.3.1",
+    "@docusaurus/module-type-aliases": "^2.3.1",
     "eslint": "^8.30.0",
     "eslint-plugin-mdx": "^2.0.5",
     "husky": "^8.0.2",
