--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Interview",
   "short_name": "Interview",
-  "description": "화이팅",
-  "display": "standalone",
+  "description": "말로 할 수 있을 때까지",
+  "display": "fullscreen",
   "theme_color": "#735AFF",
   "background_color": "#735AFF",
   "icons": [
