--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/eslint-parser": "^7.19.1",
     "@docusaurus/eslint-plugin": "^2.3.1",
     "@docusaurus/module-type-aliases": "^2.3.1",
+    "@docusaurus/types": "^2.4.0",
     "eslint": "^8.30.0",
     "eslint-plugin-mdx": "^2.0.5",
     "husky": "^8.0.2",
