--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "format": "prettier --write"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.0",
-    "@docusaurus/plugin-google-gtag": "^2.4.0",
-    "@docusaurus/plugin-pwa": "^2.4.0",
-    "@docusaurus/preset-classic": "^2.4.0",
+    "@docusaurus/core": "latest",
+    "@docusaurus/plugin-google-gtag": "latest",
+    "@docusaurus/plugin-pwa": "latest",
+    "@docusaurus/preset-classic": "latest",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -29,7 +29,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.0",
+    "@docusaurus/module-type-aliases": "latest",
     "@tsconfig/docusaurus": "^1.0.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
